--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: v4.5.0
     hooks:
       - id: check-added-large-files
+        args: ['--maxkb=5000']  # 5 MB
 
   - repo: https://github.com/pocc/pre-commit-hooks
     rev: 9a9bbc0
