--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,9 +11,9 @@ repos:
         name: clang-format
         args: [--style=file]  # uses .clang-format
 
-  - repo: https://github.com/pocc/pre-commit-hooks
-    rev: 9a9bbc0
-    hooks:
-      - id: clang-tidy
-        args: [--config-file=.clang-tidy]  # uses .clang-tidy
-        fail: false
+  # - repo: https://github.com/pocc/pre-commit-hooks
+  #   rev: 9a9bbc0
+  #   hooks:
+  #     - id: clang-tidy
+  #       args: [--config-file=.clang-tidy]  # uses .clang-tidy
+  #       fail: false
