--- a/config.conf
+++ b/config.conf
@@ -5,9 +5,9 @@ server {
     root docs/fusion_web/;
 	index index.html;
     error_page 404 error_pages/404.html;
-
+#Random Radnom And
     location / {
-        allow_methods  DELETE POST GET;
+        allow_methods  DELETE POST GET; #lsalksjjl
         autoindex off;
     }
     
